2007-02-04  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView (-mouseDown:): Release oldSelectedRows.
	Mark done as yes instead of returning early, and avoid sending action
	multiple times.

2007-02-04  Matt Rice  <ratmice@gmail.com>
	
	* Source/NSTableView (-mouseDown:): Compute the selection immediately
	instead of at the end of the loop.

2007-02-04  Richard Frith-Macdoanld <rfm@gnu.org>

	* Source/NSImageView.m: fix minor error in dragging offset.

2007-02-04  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView.m (-mouseDown:): Return early after tracking a 
	cell which prefersTrackingUntilMouseUp.
	* Source/NSPopUpButtonCell.m (+prefersTrackingUntilMouseUp:): Return
	yes.
	(-trackMouse:inRect:ofView:untilMouseUp:): Return yes or no
	depending on whether the mouse went up inside the menu or not.
	Fixes bug #18946

2007-01-31  Richard Frith-Macdoanld <rfm@gnu.org>

	* Source/GSFontInfo.m:
	* Source/NSFont.m:
	* Headers/Additions/GNUstepGUI/GSFontInfo.h:
	Add stubs for numberOfGlyphs and coveredCharacterSet

2007-01-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-_setupTextWithFrame:inView:editor:delegate:range:, 
	-endEditing:): Revert to always use a clip view, but with different size.
	
2007-01-29  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView.m: Revert previous patch.

2007-01-28  Matt Rice  <ratmice@gmail.com>
	
	* Source/NSTableView.m (-textDidEndEditing:): Handle
	NSIllegalTextMovement.
	
	* Source/NSTableView.m (-textDidEndEditing:): Add missing break
	to previous commit.

2007-01-27  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSMenuItemCell.h: Remove ivar
	_backgroundColor. Add ivar _needs_display.
	* Source/NSMenuItemCell.m (-drawingRectForBounds:): Move push in
	adjustment to here.
	* Source/NSMenuItemCell.m (-drawBorderAndBackgroundWithFrame:):
	Draw the background here and not in [drawInteriorWithFrame:inView:]
	* Source/NSMenuItemCell.m (-backgroundColor:, -tag,
	-setNeedsDisplay:, -needsDisplay): New methods.